[package]
name = "boinc_rpc"
version = "0.1.0"
authors = ["apollo"]
description = "Access BOINC clients via RPC"
edition = "2018"
repository = "https://github.com/vorot93/rust-boinc-rpc"
keywords = [
    "boinc",
    "rpc",
    "api",
]
categories = [
    "api-bindings",
]
license = "Apache-2.0"

[dependencies]
bytes = "^1.1.0"
encoding = "^0.2.33"
futures = "^0.3.21"
rust-crypto = "^0.2.36"
tokio = { version = "^1.17.0", features = ["sync", "net", "rt-multi-thread"] }
tokio-util = { version = "^0.7.1", features = ["codec"] }
tower = { version="^0.4.12", features = ["util"] }
tracing = "^0.1.32"
treexml = "^0.7.0"

[dev-dependencies]
tokio = { version = "^1.17.0", features = ["macros"] }
